k8s/gateway.yml
# See more at https://istio.io/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: delve-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 'lognes.dev'
    - 'registry.lognes.dev'
    - 'delve.lognes.dev'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - 'lognes.dev'
    - 'registry.lognes.dev'
    - 'delve.lognes.dev'
    - "kdash.lognes.dev"
    tls:
      mode: SIMPLE
      credentialName: delve-tls
  - port:
      number: 6379
      name: redis-port
      protocol: TCP
    hosts:
    - "*"
