k8s/redis-vs.yml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: delve-redis-vs
spec:
  hosts:
  - "*"
  gateways:
  - delve-gateway
  tcp:
  - match:
    - port: 6379
    route:
    - destination:
        host: delve-redis-service.default.svc.cluster.local
        port:
          number: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: delve-redis-service
spec:
  selector:
    statefulset.kubernetes.io/pod-name: delve-redis
  type: ClusterIP
  ports:
  - name: delve-redis-service
    protocol: TCP
    port: 6379
    targetPort: 6379
