k8s/registry-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry-virtual-service
spec:
  hosts:
  - registry.lognes.dev
  gateways:
  - delve-gateway
  http:
  - route:
    - destination:
        host: container-registry-service.container-registry.svc.cluster.local
        port:
          number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: container-registry-service
  namespace: container-registry
spec:
  selector:
    app: registry
  type: ClusterIP
  ports:
  - name: container-registry-service
    protocol: TCP
    port: 5000
    targetPort: 5000
