k8s/sample-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-world
        image: crccheck/hello-world:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello-app
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
  - lognes.dev
  gateways:
  - delve-gateway
  http:
  - match:
    - uri:
        exact: "/"
    route:
    - destination:
        host: hello-svc.default.svc.cluster.local
        port:
          number: 8000
